[tool.poetry]
name = "bilbyai"
version = "0.1.0"
description = ""
authors = ["Eun Shang Lee <leetdavidu@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.11"
elasticsearch = "^8.11.1"
openai = "^1.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
