[tool.poetry]
name = "bilbyai"
version = "0.1.0"
description = ""
authors = ["Eun Shang Lee <leetdavidu@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.11"
elasticsearch = "^8.11.1"
openai = "^1.7.0"
google-cloud-documentai = "^2.21.1"
google-cloud-translate = "^3.14.0"
pypdf = "^4.0.1"


[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
mypy = "^1.8.0"
ruff = "^0.1.13"
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.per-file-ignores]
# Ignore `E402` (import violations) in all `__init__.py` files, and in `path/to/file.py`.
"__init__.py" = ["E402", "F401"]
